samples/_failures_safe/1761261862_2b1b14_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1e452c1f.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1e452c1f.c:164:15: error: expected ‘;’ at end of input
  164 |         tokens
      |               ^
      |               ;
./samples/SAFE/__tmp_1e452c1f.c:164:9: error: expected declaration or statement at end of input
  164 |         tokens
      |         ^~~~~~
./samples/SAFE/__tmp_1e452c1f.c:164:9: error: expected declaration or statement at end of input
